VAR: fatto pugno

--- a/DeathRunners/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/DeathRunners/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ OpenAssetsAtExit=/Game/BluePrints/2DSideScrollerCharacter.2DSideScrollerCharacte
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1380.000 Y=820.000
+WindowSize=X=1390.000 Y=824.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -102,7 +102,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/BluePrints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1261,23 +1261,44 @@ REINST_2DSideScrollerCharacter_C_103.Actor=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+CharacterMovementComponent.Collision=True
+2DSideScrollerCharacter_C.Mobile=True
+REINST_2DSideScrollerCharacter_C_36.Collision=True
+REINST_2DSideScrollerCharacter_C_36.NavMovement=True
+REINST_2DSideScrollerCharacter_C_36.Actor=True
+REINST_2DSideScrollerCharacter_C_36.Variable=True
+REINST_2DSideScrollerCharacter_C_36.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_36.Sockets=True
+REINST_2DSideScrollerCharacter_C_36.Shape=True
+REINST_2DSideScrollerCharacter_C_36.Navigation=True
+REINST_2DSideScrollerCharacter_C_36.Rendering=True
+REINST_2DSideScrollerCharacter_C_36.Physics=True
+REINST_2DSideScrollerCharacter_C_36.Tags=True
+REINST_2DSideScrollerCharacter_C_36.ComponentReplication=True
+REINST_2DSideScrollerCharacter_C_36.Cooking=True
+REINST_2DSideScrollerCharacter_C_36.Events=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+REINST_2DSideScrollerCharacter_C_44.Collision=True
+REINST_2DSideScrollerCharacter_C_44.NavMovement=True
+REINST_2DSideScrollerCharacter_C_44.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Character Movement: Walking.CurrentFloor\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" "
 MeshComponent=
-PrimitiveComponent="\"Object.Shape.BoxExtent\" "
-SceneComponent="\"Object.Shape.BoxExtent\" "
-ActorComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent="\"Object.Character Movement: Walking.CurrentFloor\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 PaperSprite=
 PlayerFigo_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character=
-Pawn=
+Character="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 REINST_PlayerFigo_C_130="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Console.ConsoleKeys\" "
-2DSideScrollerCharacter_C=
-PaperCharacter=
+2DSideScrollerCharacter_C="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+PaperCharacter="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 PaperFlipbook=
 REINST_2DSideScrollerCharacter_C_29="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_2DSideScrollerCharacter_C_34="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1289,6 +1310,14 @@ REINST_2DSideScrollerCharacter_C_85="\"Object.Character.Sprite.Object.Collision.
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
 REINST_2DSideScrollerCharacter_C_103="\"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CharacterMovementComponent="\"Object.Character Movement: Walking.CurrentFloor\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.Character Movement: Walking.CurrentFloor\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.Character Movement: Walking.CurrentFloor\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.Character Movement: Walking.CurrentFloor\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
+REINST_2DSideScrollerCharacter_C_36="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+REINST_2DSideScrollerCharacter_C_44="\"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Function_115="\"Struct.ArrayProperty_14\" "
+ThrowPunch="\"Struct.Type\" "
 
 [MRU]
 MRUItem0=/Game/Maps/LivelloTest
@@ -1312,6 +1341,8 @@ MRUItem0=/Game/Maps/LivelloTest
 ObjectProperty.Variable=True
 PaperSprite.Sprite=True
 EdGraph.Graph=True
+2DSideScrollerCharacter_C.Collision=True
+K2Node_VariableGet.Variable=True
 
 [MessageLog]
 LastLogListing=EditorErrors
@@ -1372,8 +1403,8 @@ SlateRemoteSettings=InputSettings.Bindings.ActionMappings.Punch,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Punch,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.ActionMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Punch,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Punch,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.ActionMappings,
-2DSideScrollerCharacter_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,
-K2Node_VariableGet=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
-FloatProperty=2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Physics.ConstraintsGroup,
+2DSideScrollerCharacter_C=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
+K2Node_VariableGet=
+FloatProperty=2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 
 
