NEW: aggiunto progetto DeathRunnersCpp, ho scritto le basi delle classi BasePlayer e BasePlatform

--- a/DeathRunners/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/DeathRunners/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,12 +71,12 @@ LastLevel=/Game/Maps/Test_Level
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/BluePrints/MainPlayer.MainPlayer
 OpenAssetsAtExit=/Game/BluePrints/theThing_Blueprint.theThing_Blueprint
-OpenAssetsAtExit=/Game/BluePrints/Ledge_Blueprint.Ledge_Blueprint
 
 [RootWindow]
 ScreenPosition=X=106.000 Y=0.000
-WindowSize=X=1470.000 Y=864.000
+WindowSize=X=1480.000 Y=874.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1694,7 +1694,7 @@ Actor.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" "
 PrimitiveComponent="\"Object.Tags.ComponentTags\" "
@@ -1871,7 +1871,7 @@ CineCameraComponent=CineCameraComponent.PostProcess.AmbientOcclusion,
 CameraActor_Blueprint_C=CameraActor_Blueprint_C.PostProcess.WhiteBalance,
 BoolProperty=
 ObjectProperty=
-MainPlayer_C=2DSideScrollerCharacter_C.Rendering.LOD,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Physics.ConstraintsGroup,MainPlayer_C.Collision.Collision,
+MainPlayer_C=MainPlayer_C.Collision.Collision,2DSideScrollerCharacter_C.Physics.ConstraintsGroup,2DSideScrollerCharacter_C.Rendering.TextureStreaming,2DSideScrollerCharacter_C.Rendering.LOD,
 K2Node_VariableSet=
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
