VAR: Smash quasi funzionante, da controllare perchè il collision preset Falling su se stesso funziona ma su gli altri no

--- a/DeathRunnersCpp/Config/DefaultGame.ini
+++ b/DeathRunnersCpp/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0960635B4B1B23897B5BB9A43067731A
 ProjectName=2D Side Scroller Game Template
+CompanyName=Gattini
 
 [StartupActions]
 bAddPacks=True
