--- a/DeathRunnersCpp/Config/DefaultEngine.ini
+++ b/DeathRunnersCpp/Config/DefaultEngine.ini
@@ -64,10 +64,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 +Profiles=(Name="Ragdoll",CollisionEnabled=QueryAndPhysics,ObjectTypeName="PhysicsBody",CustomResponses=((Channel="Pawn",Response=ECR_Ignore)),HelpMessage="Simulating Skeletal Mesh Component. All other channels will be set to default.",bCanModify=False)
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.",bCanModify=False)
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ",bCanModify=False)
-+Profiles=(Name="Falling",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Player",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="TheThing",Response=ECR_Ignore),(Channel="Player",Response=ECR_Ignore)),HelpMessage="When the player is falling",bCanModify=True)
-+Profiles=(Name="Normal",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Player",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
++Profiles=(Name="Falling",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Pawn",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="TheThing",Response=ECR_Overlap),(Channel="OneSidePlatform",Response=ECR_Ignore)),HelpMessage="Needs description",bCanModify=True)
++Profiles=(Name="Jumping",CollisionEnabled=QueryAndPhysics,ObjectTypeName="Pawn",CustomResponses=((Channel="Pawn",Response=ECR_Overlap),(Channel="OneSidePlatform",Response=ECR_Overlap)),HelpMessage="Needs description",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="TheThing",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="Player",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="OneSidePlatform",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="Pawn",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -78,6 +79,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
 +ProfileRedirects=(OldName="SkeletalMeshActor",NewName="PhysicsActor")
 +ProfileRedirects=(OldName="InvisibleActor",NewName="InvisibleWallDynamic")
++ProfileRedirects=(OldName="JumpingPawn",NewName="Jumping")
 -CollisionChannelRedirects=(OldName="Static",NewName="WorldStatic")
 -CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 -CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
