--- a/DeathRunnersCpp/Config/DefaultEngine.ini
+++ b/DeathRunnersCpp/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/2DSideScrollerCPP/Maps/MainLevel.MainLevel
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
+GameDefaultMap=/Game/2DSideScrollerCPP/Maps/MainLevel.MainLevel
 ServerDefaultMap=/Game/2DSideScroller/Maps/2DSideScrollerExampleMap
 GlobalDefaultGameMode=/Game/2DSideScrollerCPP/Blueprints/DeathRunnersCppGameMode_BP.DeathRunnersCppGameMode_BP_C
 GlobalDefaultServerGameMode=/Game/DeathRunnersCppGameMode_BP.DeathRunnersCppGameMode_BP_C
