--- a/DeathRunnersCpp/Config/DefaultInput.ini
+++ b/DeathRunnersCpp/Config/DefaultInput.ini
@@ -44,6 +44,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Smash",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Smash",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Bomb",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Gamepad_LeftX,Scale=1.000000)
