--- a/DeathRunnersCpp/Config/DefaultInput.ini
+++ b/DeathRunnersCpp/Config/DefaultInput.ini
@@ -45,11 +45,14 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Smash",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Smash",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Bomb",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="FireGun",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="FireGunX",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="FireGunY",Key=Gamepad_RightY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
