VAR: pugno con due modalità, eliminato setplayertosmash nei blueprint e messo nel codice BUG: trovato bug che non conta il numero di piattaforme con cui collide il player (in poche parole conta il player come piattaforma), attualmente gli ho tolto questo controllo e quindi non fa nemmeno il conteggio e torna a collidere subito dopo il salto ma va sistemato per bene

--- a/DeathRunnersCpp/Config/DefaultEngine.ini
+++ b/DeathRunnersCpp/Config/DefaultEngine.ini
@@ -71,7 +71,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="TheThing",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="Player",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="OneSidePlatform",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
-+EditProfiles=(Name="Pawn",CustomResponses=((Channel="OnesidePlatform"),(Channel="Pawn",Response=ECR_Overlap)))
++EditProfiles=(Name="Pawn",CustomResponses=((Channel="OnesidePlatform"),(Channel="Pawn",Response=ECR_Overlap),(Channel="Player",Response=ECR_Overlap)))
 +EditProfiles=(Name="Pawn",CustomResponses=((Channel="Pawn",Response=ECR_Overlap)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
