VAR: cambiato background perchè non ci capivo niente, ho creato il GrapplePlayer ma c'è un bug di unreal che non esegue il Tick... ci sto lavorando, ho fermato la camera per debug, ho ridimensionato a scale 0.5 il capsule component del grappleplayer e del gun player

--- a/DeathRunnersCpp/Config/DefaultInput.ini
+++ b/DeathRunnersCpp/Config/DefaultInput.ini
@@ -44,14 +44,14 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Smash",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Bomb",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="FireGun",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GunOrGrapple",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Left,Scale=-1.000000)
-+AxisMappings=(AxisName="FireGunX",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="FireGunY",Key=Gamepad_RightY,Scale=1.000000)
++AxisMappings=(AxisName="AxisX",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="AxisY",Key=Gamepad_RightY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
