VAR: smash caricato solo sulle piattaforme, bomba che spaikizza (da riguardare), accenno cooldown, implementata animazione hit

--- a/DeathRunnersCpp/Config/DefaultInput.ini
+++ b/DeathRunnersCpp/Config/DefaultInput.ini
@@ -44,6 +44,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Smash",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SpecialAbility",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SpecialAbility",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Smash",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ChargeSmash",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRightOrLeft",Key=Gamepad_LeftX,Scale=1.000000)
