VAR modifiche per la build

--- a/DeathRunnersCpp/Config/DefaultGame.ini
+++ b/DeathRunnersCpp/Config/DefaultGame.ini
@@ -6,3 +6,8 @@ CompanyName=Gattini
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
